# quaternions

./: .gitignore  CMakeLists.txt  DCM2q.m  README.md  eul2q.asv  eul2q.m  pyproject.toml  q2DCM.m  q2Eul.asv  q2Eul.m  qConj.m  qInverse.m  qMult.m  qNorm.m  qNormalize.m  qPlot.m  quaternionTests.m  quaternions.py
include/: quaternions.h
src/: main.cpp
